# darwin-ach

./: .gitignore  Makefile  Makefile.c  Makefile.cpp  README.md
ach_ctrl/ctrl_server/: Makefile
ach_ctrl/ctrl_server/src/: test.cpp
ach_ctrl/ctrl_test/src/: test.cpp
ach_ctrl/ctrl_walking/: Makefile  Makefile.not_working  build.sh
ach_ctrl/ctrl_walking/include/: JointData.h  Walking.h
ach_ctrl/ctrl_walking/src/: JointData.cpp  Walking.cpp  test.cpp
ctrl_ach/ach_timeout/: Makefile
ctrl_ach/ach_timeout/src/: main.cpp
ctrl_ach/ctrl_client_example/src/: test.cpp
ctrl_ach/ctrl_server/: Makefile
ctrl_ach/ctrl_server/src/: main.cpp
ctrl_ach/off/: Makefile
ctrl_ach/off/src/: main.cpp
ctrl_ach/on/src/: main.cpp
ctrl_ach/ros2_ach_bridge/src/: do_build.sh  error.202210051219
ctrl_ach/ros2_ach_bridge/src/ros2_ach_bridge/: CMakeLists.txt  package.xml
ctrl_ach/ros2_ach_bridge/src/ros2_ach_bridge/include/: ros2_ach_bridge.h  ros2_ach_bridge_class.h  ros2_ach_bridge_methods.h  ros2_ach_bridge_methods_cmd.h  ros2_ach_bridge_methods_ref_pos.h  ros2_ach_bridge_methods_ref_tor.h  ros2_ach_bridge_methods_ref_vel.h
ctrl_ach/ros2_ach_bridge/src/ros2_ach_bridge/src/: ros2_ach_bridge.cpp  ros2_ach_bridge_state.cpp
ctrl_ach/test_cmd_vel/src/: test.cpp
ctrl_ach/test_upper_body/: Makefile
ctrl_ach/test_upper_body/src/: test.cpp
ctrl_ach/test_walking/: Makefile
ctrl_ach/test_walking/include/: Walking.h
ctrl_ach/test_walking/src/: JointData.cpp
ctrl_ach/walking/: Makefile
ctrl_ach/walking/src/: main.cpp
include/: MotorRefStamped.msg  cm730.h  cm730_defines.h  cm730_method_defs.h  cm730_serial.h  cm730_vars.h  lofaro_coms.h  lofaro_darwin.h  lofaro_darwin_ach.h  lofaro_darwin_ach_client.h  lofaro_darwin_class.h  lofaro_darwin_dan.h  lofaro_darwin_dyn.h  lofaro_darwin_methods_dyn.h  lofaro_defines.h  lofaro_defines.py  lofaro_defines_ach.h  lofaro_defines_ros2.h  lofaro_globals.h  lofaro_include.h  lofaro_includes_ach.h  lofaro_serial.h  lofaro_serial_dan.h  lofaro_serial_dyn.h  lofaro_types.h  lofaro_utils.h  lofaro_utils_ros2.h
install/: 50-cloud-init.yaml  51-wifi-init.yaml  darwin-legacy.sh  install-backpack.sh  install-darwin.sh  install.sh  install64bit.sh  interfaces  ros2.repos.32bit  ros2.repos.32bit.minimal
python/: darwin_ach.py
ros2/: do_build.sh
ros2/darwin_lofaro/: CMakeLists.txt  package.xml
ros2/darwin_lofaro/src/: darwin_lofaro.cpp  darwin_lofaro.cpp.bk
ros2/darwin_lofaro_msgs/: package.xml
ros2/src/darwin_lofaro/: CMakeLists.txt  CMakeLists.txt.dan  package.xml
ros2/src/darwin_lofaro/include/: darwin_lofaro.h  darwin_lofaro.h.orig-2022-09-16  darwin_lofaro_class.h  darwin_lofaro_head.h  darwin_lofaro_methods.h  darwin_lofaro_methods_cmd.h  darwin_lofaro_methods_rates.h  darwin_lofaro_methods_ref_pos.h  darwin_lofaro_methods_ref_tor.h  darwin_lofaro_methods_ref_vel.h  lofaro_timer.h
ros2/src/darwin_lofaro/src/: darwin_lofaro.cpp  darwin_lofaro.cpp.bk  darwin_lofaro_clock.cpp
ros2/src/darwin_lofaro_clock/: CMakeLists.txt  package.xml
ros2/src/darwin_lofaro_examples/: CMakeLists.txt  package.xml
ros2/src/darwin_lofaro_msgs/: CMakeLists.txt
scripts/: bind_and_unbind_usbserial.sh  darwin-ach  darwin-ach-auto-run.sh  darwin-ach-python.service  darwin-ach-ros.service  darwin-ach.service  darwin-legacy  darwin-lofaro  darwin_ach.sh  darwin_ach_python_path.sh  darwin_ach_ros.sh  darwin_ref_sub.py  do_build.sh  readSerialBitRate.py  readSerialBitRatePrint.py  reset_serial.sh  run_darwin_clock_lofaro.sh  run_darwin_lofaro.sh  setshm.sh
scripts/ros2/: darwin_clock.py  darwin_off.py  darwin_on.py  darwin_test_pub.py  darwin_test_ref.py  ros2_50hz_all.py
src/: cm730_python_example.py  darwind.c  darwind.cpp
test_ach/ctrl_client/src/: test.cpp
test_ach/ctrl_walking/: Makefile  Makefile.orig
test_ach/ctrl_walking/Data/: config.ini
test_ach/ctrl_walking/include/: JointData.h
test_ach/ctrl_walking/src/: Walking.cpp  test.cpp
tests/cpu_load_test/src/: test.cpp
tests/dyn_sdk-ft_test/src/: test.cpp
tests/imu_test/: Makefile
tests/imu_test/src/: test.cpp
tests/motor_all_read_test/src/: test.cpp
tests/motor_read_test/src/: test.cpp
tests/motor_set_test/src/: test.cpp
tests/off/: Makefile
tests/off/src/: test.cpp
tests/on/src/: test.cpp
tests/ping_motors_test/: Makefile
tests/ping_motors_test/src/: test.cpp
tests/ping_test/src/: test.cpp
tests/rate_test/: Makefile
tests/rate_test/src/: test.cpp
tests/read_test/src/: test.cpp
tests/scripts/: sendSerialBitRate.py
tests/serial_rate_test/src/: test.cpp
tests/serial_test/src/: test.cpp
tests/set_motor_delay/src/: test.cpp
tests/set_motot_delay_test/src/: test.cpp
tests/set_no_status_packet/src/: test.cpp
tests/state_read_test/src/: test.cpp
tests/udp_test/src/: test.cpp
tests/write_test/src/: test.cpp
tests_classes/button_test/src/: test.cpp
tests_classes/ft_test/src/: test.cpp
tests_classes/imu_test/src/: test.cpp
tests_classes/led_test/src/: test.cpp
tests_classes/motor_test/src/: test.cpp
tests_classes/off/src/: test.cpp
tests_classes/on/src/: test.cpp
tests_classes/on_off/src/: test.cpp
tests_classes/rate_test/src/: test.cpp
tests_classes/test_all/src/: test.cpp
tests_dyn_new/motor_set_test/src/: test.cpp
tests_dyn_new/off/src/: test.cpp
tests_dyn_new/on/src/: test.cpp
tests_dyn_new/read_test/src/: test.cpp
tests_dyn_sdk/bandwidth_test/src/: test.cpp
tests_dyn_sdk/cpu_load_test/src/: test.cpp
tests_dyn_sdk/ft_test/src/: test.cpp
tests_dyn_sdk/off/src/: test.cpp
tests_dyn_sdk/on/src/: test.cpp
tests_dyn_sdk/ping_test/: ls  reset_serial.sh
tests_dyn_sdk/ping_test/src/: test.cpp
tests_dyn_sdk/read_test/src/: test.cpp
tests_dyn_sdk/write_test/src/: test.cpp
tests_local_headers/all_test/src/: test.cpp
tests_local_headers/motor_read_test/src/: test.cpp
tests_local_headers/scripts/: sendSerialBitRate.py
walkig/walk_tuner/: Makefile  main.cpp
walkig_ach/walk_tuner/: Makefile
walkig_ach/walking/src/: test.cpp
walkig_ros2/walk_tuner/: main.cpp  main.cpp.2022-09-21  main.cpp.orig
(+19 files in other folders)
